# cfi-ai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/plans/: federated-crunching-dove.md  valiant-greeting-crane.md
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
scripts/: install.sh  release.sh
src/cfi_ai/: __init__.py  __main__.py  agent.py  client.py  clients.py  config.py  cost_tracker.py  github_issue.py  main.py  notifications.py  planner.py  pricing.py  sessions.py  ui.py  update_check.py  workspace.py
src/cfi_ai/commands/: __init__.py  compliance.py  help.py  intake.py  session.py  tp_review.py  wellness_assessment.py
src/cfi_ai/maps/: __init__.py  bugreport.py  clear.py  compliance.py  help.py  intake.py  model.py  notify.py  (+4 more)
tests/: test_activate_map.py  test_activate_workflow.py  test_agent_auth.py  test_agent_helpers.py  test_agent_model_swap.py  test_agent_notifications.py  test_apply_patch.py  test_attach_path.py  test_bugreport.py  test_cache_manager.py  test_cache_recovery.py  test_clear_map.py  test_client.py  test_clients.py  test_commands.py  test_config.py  test_cost_tracker.py  test_extract_document.py  test_github_issue.py  test_grounding.py  test_intake.py  test_interview.py  test_load_payer_rules.py  test_main.py  test_maps.py  test_model_map.py  test_notifications.py  test_notify_map.py  test_payers.py  test_plan_mode.py  test_planner.py  test_prompts.py  test_read_audio.py  test_resume_map.py  test_run_command.py  test_sessions.py  test_tools.py  test_ui.py  test_update_check.py  test_workspace.py
(+39 files in other folders)
